--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -197,9 +197,25 @@
                 alert(e.latlng);
             });
         
-            var marker = new L.marker(polygons[0].getBounds().getCenter()).addTo(map);
-            
-    
+            //var marker = new L.marker(polygons[0].getBounds().getCenter()).addTo(map);
+
+            let mapMarkers = {};
+            fetch('/litters') // Replace with your endpoint URL
+                .then(response => response.json())
+                .then(data => {
+                    mapMarkers = data;
+
+                    for (let key in data) {
+                        const litter = data[key]
+                        let marker = L.marker([litter.latitude, litter.longitude], {}).addTo(map);
+                        marker.bindPopup(`<strong>${litter.id}</strong><br>`);
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                });
+
+
         </script>
     
     </div>
