--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -167,11 +167,11 @@
                         <div class="col-md-6">
                             <div class="media">
                                 <label>Birthday</label>
-                                <p th:value="${user.dateOfBirth}"></p>
+                                <p th:text="${user.dateOfBirth}"></p>
                             </div>
                             <div class="media">
                                 <label>Residence</label>
-                                <p>Canada</p>
+                                <p>Macedonia</p>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -181,7 +181,7 @@
                             </div>
                             <div class="media">
                                 <label>Phone</label>
-                                <p>820-885-3321</p>
+                                <p>389-223-305</p>
                             </div>
                         </div>
                     </div>
