--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -53,16 +53,9 @@
                 </ul>
 
                 <div class="text-end">
-                    <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="btn btn-light btn-sm ml-3" href="/logout">
-                            <i class="fa-solid fa-right-from-bracket"></i> Logout
-                        </a>
-                    </li>
-                    <li class="nav-item" sec:authorize="isAnonymous()">
-                        <a class="btn btn-light btn-sm ml-3" href="/login">
-                            <i class="fa-solid fa-right-to-bracket"></i> Login
-                        </a>
-                    </li>
+                    <a href="/logout" class="button btn btn-warning" sec:authorize="isAuthenticated()">Logout</a>
+                    <a href="/login" class="btn btn-outline-light me-2" sec:authorize="isAnonymous()">Login</a>
+                    <a href="/register" class="button btn btn-warning" sec:authorize="isAnonymous()">Register</a>
                 </div>
             </div>
         </div>
@@ -135,7 +128,11 @@
                   <input id="photo" name="image" class="input-file" type="file">
                 </div>
               </div>
-            <button type="submit">Add</button>
+            <div class="form-group">
+                <div class="col-md-4" style="margin-top: 1%;">
+                    <button id="submit" name="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
 
         </form>
     </div>
