--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -32,16 +32,9 @@
             </ul>
 
             <div class="text-end">
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="btn btn-light btn-sm ml-3" href="/logout">
-                        <i class="fa-solid fa-right-from-bracket"></i> Logout
-                    </a>
-                </li>
-                <li class="nav-item" sec:authorize="isAnonymous()">
-                    <a class="btn btn-light btn-sm ml-3" href="/login">
-                        <i class="fa-solid fa-right-to-bracket"></i> Login
-                    </a>
-                </li>
+                <a href="/logout" class="button btn btn-warning" sec:authorize="isAuthenticated()">Logout</a>
+                <a href="/login" class="btn btn-outline-light me-2" sec:authorize="isAnonymous()">Login</a>
+                <a href="/register" class="button btn btn-warning" sec:authorize="isAnonymous()">Register</a>
             </div>
         </div>
     </div>
