--- a/src/main/resources/templates/regions.html
+++ b/src/main/resources/templates/regions.html
@@ -1,16 +1,25 @@
+
 <div xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.1/dist/tailwind.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
               integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
               crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
                 integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
                 crossorigin=""></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/leaflet.awesome-markers.css">
+        <link rel=""/>
         <script src="js/leaflet.awesome-markers.js"></script>
 
 
@@ -30,7 +39,8 @@
                     <li><a href="/statistic" class="nav-link px-2 text-white">Statistics</a></li>
                 </ul>
 
-                <div class="text-end">
+
+                <div class="text-end flex-box">
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="btn btn-light btn-sm ml-3" href="/logout">
                             <i class="fa-solid fa-right-from-bracket"></i> Logout
@@ -45,10 +55,18 @@
             </div>
         </div>
     </header>
+
+    <body class="flex justify-center align-center">
+    <div class="flex justify-center align-center">
     <th:block>
-    <img th:src="@{'data:image/png;base64,' + ${chartImageForAllRegions}}" alt="Chart Image"/>
+        <img th:src="@{'data:image/png;base64,' + ${chartImageForAllRegions}}" alt="Chart Image"/>
     </th:block>
     <th:block>
         <img th:src="@{'data:image/png;base64,' + ${chartImageForDays}}" alt="Chart Image"/>
+    </th:block><th:block>
+        <img th:src="@{'data:image/png;base64,' + ${chartImageForLitterType}}" alt="Chart Image"/>
     </th:block>
+
+</div>
+    </body>
 </div>
