--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -11,8 +11,8 @@
             crossorigin=""></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/leaflet.awesome-markers.css">
-    <script src="js/leaflet.awesome-markers.js"></script>
+<!--    <link rel="stylesheet" href="css/leaflet.awesome-markers.css">-->
+<!--    <script src="js/leaflet.awesome-markers.js"></script>-->
 
 
 </head>
@@ -237,7 +237,8 @@
                     for (let key in data) {
                         const litter = data[key]
                         let marker = L.marker([litter.latitude, litter.longitude], {}).addTo(map);
-                        marker.bindPopup('<img th:src="@{\'data:image/jpg;base64,\' + ${litter.encodeChartImage(litter.imageData)}}"/>');
+                        // marker.bindPopup('<img th:src="@{\'data:image/jpg;base64,\' + ${litter.encodeChartImage(litter.imageData)}}"/>');
+                        marker.bindPopup(`<strong>Longtitute</strong><p>${litter.longitude}</p><br><strong>Latitude</strong><p>${litter.latitude}</p><strong>Type of litter</strong><p>${litter.litterType}</p><strong>Severity</strong><p>${litter.litterSeverity}</p>`)
                     }
                 })
                 .catch(error => {
